--- a/responsive/about_res.css
+++ b/responsive/about_res.css
@@ -41,11 +41,14 @@
     height: 100px;
     width: 100px;
 }
+
 .btn-sm
 {
     margin:5px auto;
 }
-.rightNav {
+
+.rightNav 
+{
     display: flex;
     justify-content: center;
     align-items: center;
