--- a/responsive/contact_resp.css
+++ b/responsive/contact_resp.css
@@ -4,14 +4,16 @@
     transition: 2s;
     height:400px;
 }
+
 .nav-list
 {
     flex-direction: column;
 }
-.nav-list li{
+
+.nav-list li
+{
     list-style: none;
     margin:10px 30px;
-
 }
 
 .text-big
