--- a/responsive/more_resp.css
+++ b/responsive/more_resp.css
@@ -5,21 +5,23 @@
     transition: 2s;
     height:400px;
 }
+
 .nav-list
 {
     flex-direction: column;
 }
-.nav-list li{
+
+.nav-list li
+{
     list-style: none;
     margin:10px 30px;
-
 }
 
 .text-big
 {
-
     font-size: 23px;
 }
+
 .text-small{
     font-size: 15px;
 }
