--- a/responsive/more_resp.css
+++ b/responsive/more_resp.css
@@ -22,27 +22,31 @@
     font-size: 23px;
 }
 
-.text-small{
+.text-small
+{
     font-size: 15px;
 }
+
 .writer i
 {
     font-size: 17px;
-
 }
+
 .text-big
 {
-
     font-size: 23px;
 }
-.text-small{
+
+.text-small
+{
     font-size: 15px;
 }
+
 .container
 {
-    
     margin-top:40px;
 }
+
 .second-half img{
     height: 100px;
     width: 100px;
