--- a/responsive/more_resp.css
+++ b/responsive/more_resp.css
@@ -87,16 +87,21 @@
 {
     height:70px;
 }
+
 .v-class-res /*visibility class */
 {
     opacity: 0;
 }
-.box-main {
+
+.box-main
+{
     flex-direction: column-reverse;
     max-width: 81%;
     height: 100%;
 }
-.firstsection {
+
+.firstsection 
+{
     height:75vh;
 }
 
