--- a/responsive/index_resp.css
+++ b/responsive/index_resp.css
@@ -83,11 +83,13 @@
 .firstsection {
     height:75vh;
 }
+
 .section
 {
     flex-direction: column-reverse;
     margin-top: 37px;
 }
+
 .secleft
 {
     flex-direction: column-reverse;
@@ -97,8 +99,9 @@
 {
     padding: 13px 7px;
 }
-footer {
-   
+
+footer 
+{   
     margin-top: 10px;
 }
 
