--- a/css/conttact.css
+++ b/css/conttact.css
@@ -1,4 +1,4 @@
-
+/* for top one */
 
 *{
     padding: 0px;
@@ -12,8 +12,9 @@
     position: sticky;
     top:0px;
     cursor: pointer;
-}
+    
 
+}
 .backimage
 {
     background: rgba(31, 9, 9, 0.7)  url(../pic/back2.jpg);
@@ -26,36 +27,39 @@
 .writer i
 {
     color: #e6b8e2;
+    /* background-color: blueviolet; */
     font-size: 20px;
-}
 
+}
 .nav-list
 {
     width: 70%;
     display: flex;
     align-items: center;
+   
+    /* border:2px solid palegreen; */
 }
-
 .nav-list .logo img
 {
     width:70px;
     height: 70px;
+    /* border: 2px solid blue; */
     border-radius: 50;
      margin: 0px 10px;
 }
-
 .nav-list li{
     list-style: none;
     margin:20px 30px;
-}
 
+}
 .nav-list li a{
     text-decoration: none;
     color: white;
     font-size: 20px;
     font-family: 'Ubuntu', sans-serif;
-}
 
+    /* color: blueviolet; */
+}
 .nav-list li a:hover
 {
     color: gray;
@@ -65,9 +69,9 @@
     text-align: right;
     width: 30%;
     text-align: right;
+   /* border:2px solid pink; */
    padding:36px 30px;
 }
-
 #search
 {
     width: 150px;
@@ -84,12 +88,10 @@
     margin: auto;
     height: 60%;
 }
-
 .firstsection
 {
     height: 98vh;
 }
-
 .first-half
 {
     color: white;
@@ -99,10 +101,11 @@
     justify-content: center;
     align-items: center;
 }
-
 .second-half img{
     height: 180px;
     width: 180px;
+    /* padding: 20px 2px; */
+    /* margin: 20px 0px; */
     border: 2px solid white;
     border-radius: 50%;
     display: block;
@@ -111,44 +114,42 @@
 }
 .text-big
 {
+
     font-size: 30px;
 }
-
 .text-small{
     font-size: 19px;
 }
-
 .buttons
 {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-
 .btn1
 {
     padding: 5px;
     margin:7px 7px;
     border-radius: 5px;
+    /* background-color: wheat; */
     font-size: 16px;
     background: none;
     color: white;
     cursor: pointer;
     border:2px solid white;
 }
-
 .btn-sm
 {
     padding: 4px;
     margin:7px 7px;
     border-radius: 5px;
+    /* background-color: wheat; */
     font-size: 13px;
     background: none;
     color: white;
     cursor: pointer;
     border:2px solid white;
 }
-
 .btn
 {
     color: blanchedalmond;
@@ -158,23 +159,22 @@
     font-size: 18px;
     border: 2px solid black;
 }
-
 .contact
 {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    /* border: 2px solid red; */
     background-color: #f2c6d3;;
     padding: 20px;
 }
-
 h2{
     margin:10px;
     font-size: 23px;
+    
     font-family: 'Satisfy', cursive;
 }
-
 .inputs
 {
     display: flex;
@@ -189,7 +189,6 @@ input{
     width:250px;
     border-radius: 10px;;
 }
-
 #Query
 {
     border-radius: 10px;
@@ -197,7 +196,10 @@ input{
     border:2px solid black
 }
 
-# for profile-container
+
+
+
+#profile-container
 {
     display: flex;
     font-family: 'Baloo 2', cursive;
@@ -209,6 +211,8 @@ input{
     align-items: center;
     color: black;
     font-size: 20px;
+    /* border: 2px solid red; */
+
 }
 #profile-container::before
 {
@@ -223,8 +227,8 @@ input{
     opacity: 0.5;
     
 }
-
 #profile-container #logo
+
 {
     height: 200px;
     width: 200px;
@@ -249,6 +253,7 @@ input{
     {
         left:0px;
         top:0px;
+        /* background-color: rgb(238, 253, 31); */
         border-radius: 50%;
         border: 2px solid green;
         transform: rotate(34deg);
@@ -279,8 +284,8 @@ input{
         border: 2px solid yellow;
         transform: rotate3d();
     }
-}
 
+}
 #profile-container .bottom
 {
     display:flex;
@@ -288,8 +293,9 @@ input{
     justify-content:center ;
     align-items: center;
     margin-top:30px;
+    /* border: 2px solid green; */
+    
 }
-
 #profile-container .bottom  img
 {
     height: 28px;
@@ -304,7 +310,7 @@ input{
 }
 
 span{
-    margin: 10px
+margin: 10px
 }
 
  h1
@@ -328,24 +334,26 @@ span{
     padding: 5px;
 }
 
-footer
-{
+footer{
+    /* margin:20px; */
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: gray;
     height: 90px;
 }
-
 footer p
 {
     font-size: 20px;
     color: white;
 }
-
 .footer
 {
     display: flex;
     justify-content: center;
     align-items: center;
+
 }
+
+/* for below one */
+
